--- a/ReproducerApp/package.json
+++ b/ReproducerApp/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-calcturbo": "link:./modules/react-native-calcturbo"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
